@@ -36,19 +36,19 @@ extern intnat * caml_frametable[];
 static frame_descr * next_frame_descr(frame_descr * d) {
   unsigned char num_allocs = 0, *p;
   CAMLassert(d->retaddr >= 4096);
-  if (d->frame_size != 0xFFFF) {
+  if (!frame_return_to_C(d)) {
     /* Skip to end of live_ofs */
     p = (unsigned char*)&d->live_ofs[d->num_live];
     /* Skip alloc_lengths if present */
-    if (d->frame_size & 2) {
+    if (frame_has_allocs(d)) {
       num_allocs = *p;
       p += num_allocs + 1;
     }
     /* Skip debug info if present */
-    if (d->frame_size & 1) {
+    if (frame_has_debug(d)) {
       /* Align to 32 bits */
       p = Align_to(p, uint32_t);
-      p += sizeof(uint32_t) * (d->frame_size & 2 ? num_allocs : 1);
+      p += sizeof(uint32_t) * (frame_has_allocs(d) ? num_allocs : 1);
     }
     /* Align to word size */
     p = Align_to(p, void*);
