@@ -366,6 +366,9 @@ Working version
 
 ### Internal/compiler-libs changes:
 
+- #11990: Improve comments and macros around frame descriptors.
+  (Nick Barnes, review by Gabriel Scherer)
+
 - #11847, #11849, #11851, #11898: small refactorings in the type checker
   (Gabriel Scherer, review by Nicolás Ojeda Bär)
 
